compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__externals__imported_javascript_only_function.snap
---
source: compiler-core/src/type_/tests/externals.rs
assertion_line: 163
expression: "import module\npub fn main() {\n  module.javascript_only()\n}"
---
----- SOURCE CODE
-- module.rakun
@external(javascript, "one", "two")
pub fn javascript_only() -> Int

-- main.rakun
import module
pub fn main() {
  module.javascript_only()
}

----- ERROR
error: Unsupported target
  ┌─ /src/one/two.rakun:3:9
  │
3 │   module.javascript_only()
  │         ^^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
