compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__externals__javascript_only_function_with_javascript_external.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "@external(javascript, \"one\", \"two\")\nfn javascript_only() -> Int\n\n@external(javascript, \"one\", \"two\")\npub fn uh_oh() -> Int {\n  javascript_only()\n}\n"
---
----- SOURCE CODE
@external(javascript, "one", "two")
fn javascript_only() -> Int

@external(javascript, "one", "two")
pub fn uh_oh() -> Int {
  javascript_only()
}


----- ERROR
error: Unsupported target
  ┌─ /src/one/two.rakun:6:3
  │
6 │   javascript_only()
  │   ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
